fixes the following issues:

* simple and advanced search doesn't work for "tag names"
* new operators for "album" search added (LIKE, NLIKE) to be consistant with "tag" search
* lineedit widget in advanced search needs to expand, it was too short if window is resized
* some items in the operator combobox were not readable, because the box was resized on key change. Now the box is prepopulated with all operators first and its size is restored on every key change.

BUG: 163227

svn path=/branches/extragear/kde3/graphics/digikam/; revision=817988