kioslave/digikamsearch.cpp
@@ -465,7 +465,14 @@ QString kio_digikamsearch::subQuery(enum kio_digikamsearch::SKey key,
     {
         case(ALBUM):
         {
-            query = " (Images.dirid $$##$$ $$@@$$) ";
+            if (op == EQ || op == NE)
+                query = " (Images.dirid $$##$$ $$@@$$) ";
+            else // LIKE AND NLIKE
+                query = " (Images.dirid IN "
+                        "    (SELECT a.id FROM Albums a, Albums b "
+                        "      WHERE a.url $$##$$ '%' || b.url || '%' AND b.id = $$@@$$))";
+            query.replace("$$@@$$", QString::fromLatin1("'") + escapeString(val)
+                    + QString::fromLatin1("'"));
             break;
         }
         case(ALBUMNAME):
@@ -520,12 +527,12 @@ QString kio_digikamsearch::subQuery(enum kio_digikamsearch::SKey key,
                 query = " (Images.id IN "
                         "   (SELECT imageid FROM ImageTags "
                         "    WHERE tagid IN "
-                        "   (SELECT id FROM Tags WHERE name LIKE $$@@$$))) ";
+                        "   (SELECT id FROM Tags WHERE name = $$@@$$))) ";
             else if (op == NE)
                 query = " (Images.id NOT IN "
                         "   (SELECT imageid FROM ImageTags "
                         "    WHERE tagid IN "
-                        "   (SELECT id FROM Tags WHERE name LIKE $$@@$$))) ";
+                        "   (SELECT id FROM Tags WHERE name = $$@@$$))) ";
             else if (op == LIKE)
                 query = " (Images.id IN "
                         "   (SELECT ImageTags.imageid FROM ImageTags JOIN TagsTree on ImageTags.tagid = TagsTree.id "
@@ -537,8 +544,8 @@ QString kio_digikamsearch::subQuery(enum kio_digikamsearch::SKey key,
                         "    WHERE TagsTree.pid = (SELECT id FROM Tags WHERE name LIKE $$@@$$) "
                         "    OR ImageTags.tagid = (SELECT id FROM Tags WHERE name LIKE $$@@$$) )) ";
 
-            query.replace("$$@@$$", QString::fromLatin1("'") + escapeString(val)
-                        + QString::fromLatin1("'"));
+//             query.replace("$$@@$$", QString::fromLatin1("'") + escapeString(val)
+//                         + QString::fromLatin1("'"));
 
             break;
         }
